--- a/src/content/post/markdown-elements-demo-post.mdx
+++ b/src/content/post/markdown-elements-demo-post.mdx
@@ -1,6 +1,7 @@
 ---
 publishDate: 2023-01-02T00:00:00Z
 title: Markdown elements demo post
+image: https://images.unsplash.com/photo-1637144113536-9c6e917be447?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1674&q=80
 excerpt: Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui mollit tempor pariatur nisi minim dolor.
 tags:
   - markdown
